Add linux specific codes